force-app/main/default/objects/ProcessSettings__c/ProcessSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Process Settings</label>
</CustomObject>