force-app/main/default/objects/ProcessSettings__c/fields/allowStandaloneQuotes__c.field-meta.xml
<CustomField>
    <fullName>allowStandaloneQuotes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>allow Standalone Quotes</label>
    <type>Checkbox</type>
</CustomField>