force-app/main/default/objects/ProcessSettings__c/fields/AutomaticAccountCreation__c.field-meta.xml
<CustomField>
    <fullName>AutomaticAccountCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to Indicate if a Account is created Automatically on Lead Conversion</description>
    <label>Automatic Quote Creation</label>
    <type>Checkbox</type>
</CustomField>