force-app/main/default/objects/ProcessSettings__c/fields/AutomaticAssetCreation__c.field-meta.xml
<CustomField>
    <fullName>AutomaticAssetCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Asset Creation</label>
    <type>Checkbox</type>
</CustomField>