force-app/main/default/objects/ProcessSettings__c/fields/AutomaticLeadConversion__c.field-meta.xml
<CustomField>
    <fullName>AutomaticLeadConversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if Leads are converted on 1st Visit Booking</description>
    <label>Automatic Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>