force-app/main/default/objects/ProcessSettings__c/fields/AutomaticOrderCreation__c.field-meta.xml
<CustomField>
    <fullName>AutomaticOrderCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if Order is Created Automatically on Quote Acceptance</description>
    <label>Automatic Order Creation</label>
    <type>Checkbox</type>
</CustomField>