force-app/main/default/objects/ProcessSettings__c/fields/AutomaticQuoteCreation__c.field-meta.xml
<CustomField>
    <fullName>AutomaticQuoteCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to Indicate if a Quote is created Automatically on Opportunity Creation</description>
    <label>Automatic Quote Creation</label>
    <type>Checkbox</type>
</CustomField>