force-app/main/default/objects/ProcessSettings__c/fields/AutomaticWorkOrderCreation__c.field-meta.xml
<CustomField>
    <fullName>AutomaticWorkOrderCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if WorkOrder is Created Automatically on Order Creation</description>
    <label>Automatic Order Creation</label>
    <type>Checkbox</type>
</CustomField>